include note about gobject and qof

--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -268,7 +268,9 @@ below.
      vast majority of the application guts.
      </p>
      <br>
-<li><p>Why not use GLib GObjects?  I dunno.
+<li><p>Why not use GLib GObjects?  I dunno.  Actually, I'm working 
+    on a QOF-to-GObject glue right now. Next release, GLib GObjects
+    will be searchable with QOF.
     </p>
 <li><p>Why not UML?  What's UML got to do with it?
     </p>
