add clarifying remarks

--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -248,7 +248,13 @@ below.
      map object fields to database fields because the mapping is 
      never 1-to-1.  This remains a difficult and tedious task
      for the programmer.  These other languages don't offer
-     an improvement over C. 
+     an improvement over C.  One of the stated design goals
+     of <a href="http://dwi.sourceforge.net">DWI</a> is to 
+     provide an explict but easy-to-use, flexible way of 
+     mapping network object or database objects to the run-time
+     objects that applications use, and those, in turn to the 
+     GUI dialogs and panels that the application presents to 
+     the user.
      <br><br>
      (P.S. Totally off-topic, but I sometimes get the feeling that
      the XML standards people are trying to reinvent scheme/lisp
@@ -278,6 +284,13 @@ below.
 </ul>
 
 ... Unfinished ... Draft ... 
+<hr>
+See also:
+<ul>
+<li><a href="http://ometer.com/desktop-language.html">Java, Mono, or
+     C++?  Thoughts on the future of open source desktop development</a>
+    by Havoc Pennington.
+</ul>
 
 
 <hr>
