--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -281,6 +281,9 @@ below.
 <li><p>Why not UML?  What's UML got to do with it?
     </p>
      <br>
+<li><p>Why not XUL?  What's XUL got to do with it?
+    </p>
+     <br>
 </ul>
 
 ... Unfinished ... Draft ... 
