--- a/qof/website/qof.html
+++ b/qof/website/qof.html
@@ -41,6 +41,8 @@ notable are:
     values, and then uses the statement 
     <b><tt>"SELECT * FROM GtkButton WHERE (label = 'asdfasdf');"</tt></b>
 </ul>
+The API documentation is embedded in the header files and 
+<a href="doxy/modules.html">can be viewed online, as HMTL, here</a>.
 
 <p>
 QOF is an offshoot from the <a href="http://www.gnucash.org/">GnuCash
