spell check, add a few URL's

--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -38,7 +38,7 @@ the product data with the customer, to Bugzilla, where the
 bug status is 'shared' between developers and users, to 
 p2p networks for sharing mp3's.   Today, certain types
 of 'basic' sharing are still incredibly hard: for example, 
-syncing the addressbook on my cell phone with the address book 
+syncing the address book on my cell phone with the address book 
 on my home computer with the address book on my work computer(s).
 Never mind sharing parts of my address book with friends.
 <p>
@@ -72,11 +72,11 @@ a global level.  The global filesystems haven't really
 worked out either, with one grand exception: the web itself
 (i.e. HTTP) is is in many ways filesystem-like.  But the
 success of the web is not due to its filesystem-like aspects,
-but rather due to the existance of a common document viewer:
+but rather due to the existence of a common document viewer:
 the web browser.  Shared file systems, though better than 
 nothing, have one major pitfall: they still don't make 
 writing multi-user apps easy.   Two users updating the
-same file at the same time is a recipie for disaster.  
+same file at the same time is a recipe for disaster.  
 The two apps that are updating the same file at the same 
 time don't know about each other, and there is no native 
 or built-in default that would let them find out.
@@ -93,7 +93,7 @@ eventually seem to figure out, its bitchingly hard
 to use CORBA (or its cousins), and there seems to be 
 relatively little payoff for the effort.  Great:
 now one has distributed, networked objects, but so 
-what?  One still doesn't have persistance (which
+what?  One still doesn't have persistence (which
 is the strength file systems), and one doesn't 
 have searchability (which is what databases offer)
 and one doesn't have much in the way of security
@@ -124,9 +124,9 @@ start, for decades) based on database technology if not
 SQL proper.  This is because <b>SQL can scale to extremely
 large datasets without loosing the ability for a user to
 focus in on one or two records</b>.  SQL came with a kind-of
-browser: the SQL command line.  Though pale in comparision
+browser: the SQL command line.  Though pale in comparison
 to the web browser, it did allow you to look where you
-wanted, to find the needle in the haysack.  SQL is scalable,
+wanted, to find the needle in the haystack.  SQL is scalable,
 and it can be browsed: these are the same strengths that
 made the web possible.
 <p>
@@ -156,14 +156,14 @@ Object oriented programming and SQL weren't really made for
 each other, although object oriented databases do help.
 <p>
 In summary, <b>the future of desktop programming lies with a 
-broadly powerful query engine, coupled to persistant OOP-style
-objects that are distrubuted, decentralized, secure, 
+broadly powerful query engine, coupled to persistent OOP-style
+objects that are distributed, decentralized, secure, 
 protectable and versionable</b>.  This is the true 'convergence':
 not that of TV's, phones and computers, but 
 the convergence of the best features of P2P, SQL, file systems,
 version control and the web, which, to the programmer, looks
-like nothing more than 'peristant objects', and is no harder
-to 'use' than garbage collection is for a java programmer. 
+like nothing more than 'persistent objects', and is no harder
+to 'use' than garbage collection is for a Java programmer. 
 This is the grand vision of what desktop programming should 
 be.
 
@@ -372,7 +372,7 @@ below.
      for the programmer.  These other languages don't offer
      an improvement over C.  One of the stated design goals
      of <a href="http://dwi.sourceforge.net">DWI</a> is to 
-     provide an explict but easy-to-use, flexible way of 
+     provide an explicit but easy-to-use, flexible way of 
      mapping network object or database objects to the run-time
      objects that applications use, and those, in turn to the 
      GUI dialogs and panels that the application presents to 
@@ -413,8 +413,14 @@ below.
 See also:
 <ul>
 <li><a href="http://ometer.com/desktop-language.html">Java, Mono, or
-     C++?  Thoughts on the future of open source desktop development</a>
+    C++?  Thoughts on the future of open source desktop development</a>
     by Havoc Pennington.
+<li><a href="http://www.gnome.org/~seth/storage/">Gnome Storage</a>
+    is a project that looks at the query problem for desktop 
+    applications.
+<li><a href="http://www.linas.org/theory/eternity.html">The Next
+    Few Decades of Computing</a> takes a similarly broad view of
+    programming interfaces. 
 </ul>
 
 
